# lifx-manager

./: .gitignore  .hlint.yaml  cabal.project  cabal.project.freeze  cabal.project.local  lifx-manager.cabal
src/: Embed.hs  Main.hs  Orphans.hs
src/Embed/: Util.hs
src/Util/: Brillo.hs  Gloss.hs  Icon.hs  Window.hs  X.hs
src/Util/Window/: Unsupported.hs  Win32.hs  X11.hs
