cabal-version:      3.0
name:               lifx-manager
version:            0.1.0.0
license:            BSD-3-Clause
author:             George Thomas
maintainer:         georgefsthomas@gmail.com

executable lifx-manager
    main-is: Main.hs
    other-modules:
        Embed
        Embed.Util
        Util.Gloss
    hs-source-dirs: src
    ghc-options:
        -Wall
        -threaded
    build-depends:
        base >= 4.16,
        binary ^>= 0.8.8,
        bmp ^>= 1.2.6.3,
        bytestring ^>= 0.11,
        colour ^>= 2.3.5,
        composition ^>= 1.0.2.1,
        containers ^>= 0.6.2.1,
        extra ^>= 1.7.1,
        file-embed ^>= 0.0.15,
        filepath ^>= 1.4.2.1,
        gloss ^>= 1.13.2,
        JuicyPixels ^>= 3.3.6,
        lifx-lan ^>= 0.8,
        monad-loops ^>= 0.4.3,
        mtl ^>= {2.2.2, 2.3},
        network ^>= 3.1.1.1,
        optics ^>= 0.4,
        optics-extra ^>= 0.4,
        optparse-generic ^>= 1.4.4,
        pretty-simple ^>= 4.1,
        random ^>= 1.2.0,
        safe ^>= 0.3.19,
        streams ^>= 3.3,
        template-haskell ^>= {2.18, 2.19},
        text ^>= {1.2.3, 2.0},
        transformers ^>= {0.5.6, 0.6},
        time ^>= {1.10, 1.11, 1.12},
        vector ^>= {0.12.3.1, 0.13},
        window-utils ^>= 0.2,
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        DataKinds
        DeriveAnyClass
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        InstanceSigs
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NoFieldSelectors
        NoMonomorphismRestriction
        NumericUnderscores
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeOperators
        ViewPatterns
