cabal-version:      3.0
name:               lifx-manager
version:            0.1.0.0
license:            BSD-3-Clause
author:             George Thomas
maintainer:         georgefsthomas@gmail.com
extra-source-files: embed/*.png

executable lifx-manager
    main-is: Main.hs
    other-modules:
        Embed
        Embed.Util
        Util.Gloss
    hs-source-dirs: src
    ghc-options:
        -Wall
        -threaded
    build-depends:
        base,
        binary,
        bmp,
        bytestring,
        colour,
        composition,
        containers,
        extra,
        file-embed,
        filepath,
        gloss,
        JuicyPixels,
        lifx-lan,
        monad-loops,
        mtl,
        network,
        optics,
        optics-extra,
        optics-operators,
        optparse-generic,
        pretty-simple,
        random,
        safe,
        streams,
        template-haskell,
        text,
        transformers,
        time,
        vector,
        window-utils,
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        DataKinds
        DeriveAnyClass
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        InstanceSigs
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NoFieldSelectors
        NoMonomorphismRestriction
        NumericUnderscores
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PartialTypeSignatures
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeOperators
        ViewPatterns
